tests/NormalTests/paczka2/big_fuzzy/24044532.err
Error in line 6: A240 A702 21,5
Error in line 13: RLQTioS A702 368,01
Error in line 19: z5g7 A240 97,26
Error in line 4: z5g7 A702 82,3
Error in line 9: A240 A240 57,6
Error in line 20: z5g7 A240 277,2
Error in line 21: RLQTioS A702 369,2
Error in line 37: RLQTioS S847 78,6
Error in line 45: SOWrgmmi A702 23,1
Error in line 48: 0tXb S513 66,4
Error in line 43: z5g7 S513 2,8
Error in line 61: RLQTioS A&02 44,9
Error in line 58: 5LdSQe S847 13,3
Error in line 54: v0dXDLZ A240 95,9
Error in line 73: SOWrgmmi A702 11,5
Error in line 86: 5LdSQe A702 51,52
Error in line 83: z5g7 A702 32,5
Error in line 88: 5LdSQe A702 72,2
Error in line 95: 5LdSQe S847 94,9
Error in line 94: A240 S847 20,2
Error in line 102: z5g7 S847 712,0
Error in line 112: z5g7 S513 78,6
Error in line 76: v0dXDLZ S847 83,5
Error in line 119: v0dXDLZ S513 3,8
Error in line 126: A240 S513 20L,0
Error in line 127: 5LdSQe A702 129,0
Error in line 109: RLQTioS A240 1,5
Error in line 133: SOWrgmmi A240 155,6
Error in line 135: SOWrgmmi A702 25,9
Error in line 138: RLQTioS S513 5,3
Error in line 115: A240 S513 92,5
Error in line 145: RLQTioS S513 29,6
Error in line 153: Ae40 Ae40 9,6
Error in line 149: z5g7 A702 94,1
Error in line 156: SOWrgmmi A240 34,43
Error in line 148: 0tXb S513 81,0
Error in line 155: z5g7 A240 73,4
Error in line 162: 5LdSQe A702 70,0
Error in line 160: SOWrgmmi S513 63,1
Error in line 159: z5g7 S513 42,9
Error in line 164: SOWrgmmi S847 52,1
Error in line 171: SOWrgmmi A240 36,4
Error in line 177: v0dXDLZ A702 90,4
Error in line 158: 0tXb A702 82,6
Error in line 187: v0dXDLZ S847 47,4
Error in line 189: v0dXDLZ S513 79,6
Error in line 181: 5LdSQe A702 260,2
Error in line 197: 5LdSQe S847 -2,5
Error in line 199: SOWrgmmi S513 71,4
Error in line 192: 5LdSQe S847 49,1
Error in line 211: RLQTioS S513 26,6
Error in line 213: z5g7 A702 96,8
Error in line 218: RLQTioS A240 35,70
Error in line 223: v0dXDLZ S847 63,8
Error in line 204: 0tXb A240 111,2
Error in line 234: 0tXb A702 38,5
Error in line 238: z5g7 A240 4,4
Error in line 244: SOWrgmmi S847 2,8
